Started Klogger extension methods